# jupyterlab-vim

./: .gitignore  .prettierignore  .yarnrc.yml  CHANGELOG.md  History.md  MANIFEST.in  README.md  RELEASE.md  install.json  installing.md  modify-keybinds.md  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml  npmpublish.yml  publish.yml  pull-request.yml  pypipublish.yml
binder/: environment.yml  labextensions.txt  postBuild
jupyterlab_vim/: __init__.py  _version.py
schema/: plugin.json
src/: codemirrorCommands.ts  index.ts  labCommands.ts
style/: base.css
